move graphql files to separate package; remove test object mapper instantiations in favour of single class-level instance; handle turkish characters in mission name test and use more consistent and descriptive variable names; remove loop from last test and simplify its deserialization logic